<resources>
    <string name="app_name">a11y for views</string>

    <string name="role_description_switch">Switch</string>

    <string name="wallet_card_deposit">Deposit</string>
    <string name="wallet_card_transfer">Transfer</string>
    <string name="wallet_card_accessibility_description">Wallet card: %s, balance is %s</string>
    <string name="wallet_card_accessibility_card_click_action">View wallet details</string>
    <string name="wallet_card_accessibility_show_qr_code_action">Show address QR code</string>
    <string name="wallet_card_accessibility_copy_the_address_action">Copy the wallet address</string>

    <string name="wallet_title">Main Wallet</string>
    <string name="wallet_balance">ETH 51.7075000194</string>
    <string name="wallet_address">0xAb5801a7D398351b8bE11C439e05C5B3259aeC9B</string>

    <string name="operation_switch_deposit_label">Deposit</string>
    <string name="operation_switch_transfer_label">Transfer</string>
    <string name="operation_switch_accessibility_description">Operation type</string>
    <string name="operation_switch_accessibility_toggle_action">Toggle</string>
</resources>