<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <dev.weazyexe.a11yforviews.customviews.WalletCard
        android:id="@+id/wallet_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:wallet_card_address="@string/wallet_address"
        app:wallet_card_balance="@string/wallet_balance"
        app:wallet_card_title="@string/wallet_title" />

    <dev.weazyexe.a11yforviews.customviews.OperationSwitch
        android:id="@+id/operation_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wallet_card" />

</androidx.constraintlayout.widget.ConstraintLayout>